<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAppMgr</string>
    <string name="sort">Sort</string>
    <string name="user_apps">USER APPs</string>
    <string name="sys_apps">SYS APPs</string>
    <string name="backup_apps">BACKUPs</string>
    <string name="sort_type">Sort Type</string>
    <string name="search">Search</string>
    <string name="key_words">Keywords</string>
    <string name="open">Open</string>
    <string name="info">Info</string>
    <string name="backup">Backup</string>
    <string name="delete">Delete</string>
    <string name="install">Install</string>
    <string name="backup_success">Backup success</string>
    <string name="uninstall">Uninstall</string>
    <string name="no_enough_space">No enough space</string>
    <string name="more">More</string>
    <string name="google_play">Google Play</string>
    <string name="send">Send</string>
    <string name="send_by">Send By</string>
    <string name="nothing_selected">Nothing selected</string>
    <string name="more_actions">More actions</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="press_back_again_to_exit">press \"BACK\" again to exit</string>
    <string name="saving_app">Saving App:</string>
    <string name="saving_apps">Saving Apps</string>
    <string name="error">Error</string>
    <string name="crash_msg">Sorry, crash happened.</string>
    <string name="loading_apps">Loading Apps&#8230;</string>
    <string name="moving_akps">Moving Apks&#8230;</string>
    <string name="new_app_installed">New App Installed:</string>
    <string name="app_changed">App Changed:</string>
    <string name="app_removed">App Removed.</string>
    <string name="app_removed_name">App Removed:</string>
    <string name="share_apps">Share apps</string>
    <string name="email_body">Enjoy apps, thanks</string>
    <string name="select_all_above">Sel. &amp; All Above</string>
    <string name="deselect_all_above">Desel. &amp; All Above</string>
    <string name="select_all_below">Sel. &amp; All Below</string>
    <string name="deselect_all_below">Desel. &amp; All Below</string>
    <string name="unknown">unknown</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="refresh">Refresh</string>
    <string name="view">View</string>
    <string name="launch_fail">Launch Fail</string>
    <string name="sdcard_changed">Sdcard changed, pls restart!</string>
    <string name="cancel">Cancel</string>
    <string name="default_dir">Def. Dir</string>
    <string name="ok">OK</string>
     <string name="no">No</string>
     <string name="no_sd">No Sd card available</string>
    <string name="yes">Yes</string>
    <string name="back_dir">Backup Dir</string>
    <string name="sd_free">SD Free</string>
    <string name="sd_used">SD Used</string>
    <string name="sd_total">SD Total</string>
    <string name="choose">Choose</string>
    <string name="move_success">Move Success!</string>
    <string name="move_apk">Do you want to move all Apks to new dir?</string>
    <string name="version_name">1.0</string>
    <string name="new_f">NEW</string>
    <string name="new_folder">New Folder</string>
    <string name="go_up">UP</string>
	<string name="folder_name_exists">Name Exists</string>
	<string name="not_null">Not null</string>
	
	<string name="pkg_name">Package Name</string>
	<string name="version">Version</string>
	<string name="apk_info">APK</string>
	<string name="last_updated_time">Last Updated Time</string>
	<string name="time_info">Time Info.</string>
	<string name="first_install_time">First Installed Time</string>
	<string name="activity">Activity</string>
	<string name="component">Component</string>
	<string name="copied">Copied</string>
	<string name="none_info">None</string>
	<string name="new_name">New Name</string>
	<string name="common">Common</string>
	<string name="settings">Settings</string>
	<string name="play_ani_app_details">Play Animation in App details</string>
	<string name="play_ani">Animation enabled</string>
	<string name="not_paly_ani">Animation disabled</string>
	<string name="app_info">App Info.</string>
	<string name="share">Share</string>
	<string name="open_soure_license">Open source licenses</string>
	<string name="thx_github">Thanks all the guys on Github &amp; Stackoverflow !</string>
	<string name="copy_right">Copyright \u00A9 2015 By Cao \u00B7 Chuang. All rights reserved</string>
	<string name="launch_myself">Present By Cao \u00B7 Chuang</string>
	<string name="cao_chuang">Cao \u00B7 Chuang</string>
	<string name="uninstalled">Uninstalled</string>
	<string name="diff_ver">Diff. Ver</string>
	<string name="same_ver">Same Ver</string>

</resources>