<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content" >

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" >

        <LinearLayout
            android:id="@+id/bgLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/list_row_item_bg"
            android:descendantFocusability="beforeDescendants"
            android:weightSum="2" >

            <RelativeLayout
                android:id="@+id/item"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:paddingBottom="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="5dp" >

                <ImageView
                    android:id="@+id/app_icon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/user_app_icon_bg"
                    android:contentDescription="appIcon"
                    android:padding="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/userapp_holder" />

                <LinearLayout
                    android:id="@+id/text_linear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:layout_toLeftOf="@+id/expandable_toggle_button"
                    android:layout_toRightOf="@+id/app_icon"
                    android:orientation="vertical"
                    android:weightSum="3" >

                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="App Name"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/app_pkgname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="1"
                        android:singleLine="true"
                        android:text="App Version"
                        android:textColor="@color/gray" />

                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="1"
                        android:singleLine="true"
                        android:text="App Version"
                        android:textColor="@color/gray" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/expandable_toggle_button"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/app_icon"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/app_icon"
                    android:layout_centerVertical="true"
                    android:background="@drawable/more_btn_bg"
                    android:focusable="false"
                    android:gravity="center"
                    android:layout_marginRight="2dp"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:scaleType="centerInside"
                        android:src="@drawable/arrow_down" />
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/expandable"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_weight="1"
                android:background="@drawable/expandable_area_bg"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/openActionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_applist_action_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/openImageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/open" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/open"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/infoActionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_applist_action_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/infoImageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/info" />

                    <TextView
                        android:id="@+id/infoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/info"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/backupActionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_applist_action_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/backupImageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/download" />

                    <TextView
                        android:id="@+id/backupTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/backup"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/uninstallActionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_applist_action_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/uninstallImageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/delete" />

                    <TextView
                        android:id="@+id/uninstallTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/uninstall"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/moreActionLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginRight="3dp"
                    android:layout_marginTop="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/user_applist_action_bg"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/moreImageView"
                        android:layout_width="42dp"
                        android:layout_height="42dp"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="centerInside"
                        android:src="@drawable/more" />

                    <TextView
                        android:id="@+id/MoreTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:text="@string/more"
                        android:textColor="#ffffff"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>